--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "bootstrap": "^5.2.0",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
+    "react-datepicker": "^4.8.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
