--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^4.8.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
