--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@mui/styles": "^5.9.3",
@@ -31,8 +32,10 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-simple-image-slider": "^2.4.1",
     "react-swipeable-views": "^0.14.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "use-resize-observer": "^9.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
