--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
+    "react-show-more": "^2.0.0",
     "react-simple-image-slider": "^2.4.1",
     "react-swipeable-views": "^0.14.0",
     "sass": "^1.49.9",
